--- a/Practica1.html
+++ b/Practica1.html
@@ -371,6 +371,13 @@ frecuente? ¿De qué países tenemos más vehículos?</p>
 <p>Descriptiva, ya que estamos buscando estadíticas del total de
 vehículos según sus características para hacer un ajuste del precio de
 los peajes.</p></li>
+<li><p>Dado un registro de visualizaciones de un servicio de
+video-on-demand, donde disponemos de los datos del usuario, de la
+película seleccionada, fecha de visualización y categoría de la
+película, queremos saber ¿Hay alguna preferencia en cuanto a género
+literario según los usuarios y su rango de edad?</p>
+<p>Exploratoria, ya que se está relacionando el rango de edad del
+usuario con la preferencia del género cinematográfico.</p></li>
 </ol>
 </div>
 
