--- a/Practica1.html
+++ b/Practica1.html
@@ -359,26 +359,33 @@ display: none;
 
 <div id="ejercicio-1" class="section level2">
 <h2>Ejercicio 1</h2>
-<p>De las siguientes preguntas, clasifica cada una como descriptiva,
-exploratoria, inferencia, predictiva o causal, y razona brevemente (una
-frase) el porqué:</p>
-<ol style="list-style-type: decimal">
-<li><p>Dado un registro de vehículos que circulan por una autopista,
-disponemos de su marca y modelo, país de matriculación, y tipo de
-vehículo (por número de ruedas). Con tal de ajustar precios de los
-peajes, ¿Cuántos vehículos tenemos por tipo? ¿Cuál es el tipo más
-frecuente? ¿De qué países tenemos más vehículos?</p>
-<p>Descriptiva, ya que estamos buscando estadíticas del total de
-vehículos según sus características para hacer un ajuste del precio de
-los peajes.</p></li>
-<li><p>Dado un registro de visualizaciones de un servicio de
+<p><strong>De las siguientes preguntas, clasifica cada una como
+descriptiva, exploratoria, inferencia, predictiva o causal, y razona
+brevemente (una frase) el porqué:</strong></p>
+<p><strong>1. Dado un registro de vehículos que circulan por una
+autopista, disponemos de su marca y modelo, país de matriculación, y
+tipo de vehículo (por número de ruedas). Con tal de ajustar precios de
+los peajes, ¿Cuántos vehículos tenemos por tipo? ¿Cuál es el tipo más
+frecuente? ¿De qué países tenemos más vehículos?</strong></p>
+<pre><code>Descriptiva, ya que estamos buscando estadíticas del total de vehículos según sus características para hacer un ajuste del precio de los peajes.</code></pre>
+<p><strong>2. Dado un registro de visualizaciones de un servicio de
 video-on-demand, donde disponemos de los datos del usuario, de la
 película seleccionada, fecha de visualización y categoría de la
 película, queremos saber ¿Hay alguna preferencia en cuanto a género
-literario según los usuarios y su rango de edad?</p>
-<p>Exploratoria, ya que se está relacionando el rango de edad del
-usuario con la preferencia del género cinematográfico.</p></li>
-</ol>
+literario según los usuarios y su rango de edad?</strong></p>
+<pre><code>Exploratoria, ya que se está relacionando el rango de edad del usuario con la preferencia del género cinematográfico.</code></pre>
+<p><strong>3. Dado un registro de peticiones a un sitio web, vemos que
+las peticiones que provienen de una red de telefonía concreta
+acostumbran a ser incorrectas y provocarnos errores de servicio.
+¿Podemos determinar si en el futuro, los próximos mensajes de esa red
+seguirán dando problemas? ¿Hemos notado el mismo efecto en otras redes
+de telefonía?</strong></p>
+<pre><code>Predictiva, ya que intentamos predecir un comportamiento futuro a partir de un registro de peticiones ya realizadas a un sitio web.</code></pre>
+<p>• Tipo de pregunta: Predictiva • Razón: Se intenta anticipar el
+comportamiento futuro (si los próximos mensajes seguirán dando
+problemas) y comparar con otras redes. (La parte de comparar con otras
+redes también tiene un componente exploratorio, pero la pregunta
+principal es predictiva).</p>
 </div>
 
 
