--- a/Practica1.html
+++ b/Practica1.html
@@ -381,11 +381,12 @@ acostumbran a ser incorrectas y provocarnos errores de servicio.
 seguirán dando problemas? ¿Hemos notado el mismo efecto en otras redes
 de telefonía?</strong></p>
 <pre><code>Predictiva, ya que intentamos predecir un comportamiento futuro a partir de un registro de peticiones ya realizadas a un sitio web.</code></pre>
-<p>• Tipo de pregunta: Predictiva • Razón: Se intenta anticipar el
-comportamiento futuro (si los próximos mensajes seguirán dando
-problemas) y comparar con otras redes. (La parte de comparar con otras
-redes también tiene un componente exploratorio, pero la pregunta
-principal es predictiva).</p>
+<p><strong>4. Dado los registros de usuarios de un servicio de compras
+por internet, los usuarios pueden agruparse por preferencias de
+productos comprados. Queremos saber si ¿Es posible que, dado un usuario
+al azar y según su historial, pueda ser directamente asignado a un o
+diversos grupos?</strong></p>
+<pre><code>Predictiva, porque a partir de los datos que tenemos del historial del usuario, le estamos asignando a un o diversos grupos.</code></pre>
 </div>
 
 
